<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="110sp" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:background="@drawable/giris_button"
            android:text="@string/startFixedText"
            android:textSize="30sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/giris_button"
            android:text="@string/settingsFixedText"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>